[project]
name = "chatterbox-onnx-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "huggingface-hub>=1.11.0",
    "librosa>=0.11.0",
    "numpy>=2.4.4",
    "onnxruntime>=1.24.4",
    "soundfile>=0.13.1",
    "transformers>=5.5.4",
]
